tests/reference/asr-coarray_02-793f8b3.stderr
semantic error: Coarray 's' has corank 2 but 1 coindices were provided
 --> tests/errors/coarray_02.f90:9:5
  |
9 |     s%x[1] = 5
  |     ^^^^^^ 
